--- a/src/assets/stylesheets/main/layout/_nav.scss
+++ b/src/assets/stylesheets/main/layout/_nav.scss
@@ -194,7 +194,6 @@
         height: px2rem(112px);
         padding: px2rem(60px) px2rem(16px) px2rem(4px);
         color: var(--md-default-fg-color--light);
-        font-weight: 400;
         line-height: px2rem(48px);
         white-space: nowrap;
         background-color: var(--md-default-fg-color--lightest);
